syntax = "proto3";

option go_package = "../akmessage";

enum ServerType
{
    No = 0;
    Gate = 1;  //
    Login = 2;  //
    Account = 3; //
    Game = 4; //
    Robot = 5; //
}

message SS_SSRoute
{
    ServerType st = 1;
    bytes data = 2;
}

message SS_Register_Req 
{
    ServerType st = 1;
}

message SS_Register_Resp
{
    
}

message SS_HeartBeat_Req
{

}

message SS_HeartBeat_Rsp
{

}